--- a/index.html
+++ b/index.html
@@ -2,83 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Campaign Disclaimer</title>
+  <title>Student Awareness Campaign</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
+      background: #f2f4f8;
+      font-family: Arial, sans-serif;
     }
 
-    .container {
+    .box {
       background: #ffffff;
-      max-width: 800px;
-      padding: 40px 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      padding: 50px 40px;
+      border-radius: 12px;
       text-align: center;
-    }
-
-    img {
-      max-width: 180px;
-      margin-bottom: 20px;
+      max-width: 400px;
+      width: 100%;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.12);
     }
 
     h1 {
-      font-size: 1.6rem;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
+      font-size: 1.4rem;
     }
 
-    p {
-      text-align: justify;
-      line-height: 1.6;
-      font-size: 0.95rem;
+    .btn {
+      display: block;
+      width: 100%;
+      padding: 14px;
+      margin: 12px 0;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
     }
 
-    .contact {
-      margin-top: 20px;
-      font-weight: bold;
-      text-align: center;
+    .register {
+      background: #1f4fd8;
+      color: white;
+    }
+
+    .disclaimer {
+      background: #e0e0e0;
+      color: #000;
+    }
+
+    .btn:hover {
+      opacity: 0.9;
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <img src="APULogo.png" alt="APU Logo" title="APULogo" />
+  <div class="box">
+    <h1>Student Awareness Campaign</h1>
 
-    <h1>Disclaimer</h1>
+    <!-- Register Button -->
+    <a class="btn register"
+       href="https://docs.google.com/forms/d/e/1FAIpQLSezce3D3uTmLeA0eFCVJVTx0zhrCXcv8NCthH5Inqq34j9Sdg/viewform"
+       target="_blank">
+       Register for Webinar
+    </a>
 
-    <p>
-      This social media awareness campaign, organized by final-year students at Asia Pacific University,
-      aims to raise awareness about social issues aligned with the UN SDGs. The views expressed are personal
-      to the students and do not represent the university's official stance.
-    </p>
-
-    <p>
-      The campaign is informational, not professional advice, and is based on available research. The creators
-      strive for accuracy but cannot guarantee completeness or timeliness. They reserve the right to moderate or
-      delete inappropriate content, including hate speech, threats, and false information.
-    </p>
-
-    <p>
-      External organizations' involvement does not imply full endorsement. Conflicts or disputes are not the
-      responsibility of Asia Pacific University or collaborating organizations. Users should exercise their own
-      judgment when engaging with the content.
-    </p>
-
-    <p class="contact">
-      For more information, contact Jerry Chong at <br />
-      info@apu.edu.my
-    </p>
+    <!-- Disclaimer Button -->
+    <a class="btn disclaimer" href="disclaimer.html">
+      View Disclaimer
+    </a>
   </div>
 
 </body>
 </html>
-
